--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="icon" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- Security Meta Tags -->
